--- a/css/404.css
+++ b/css/404.css
@@ -17,20 +17,23 @@ main {
     main .breadcrumbs a {
       text-decoration: none;
       color: #84bc22; }
-  main h2#errPage {
-    font-size: 32px;
+    main .breadcrumbs a:hover {
+      font-weight: bold;
+      color: #45413e; }
+  main h1#pageName {
+    font-size: 38px;
     font-weight: bold;
     text-align: center;
     padding: 30px 0;
     display: flex;
     align-items: center; }
-  main h2#errPage::before, main h2#errPage::after {
+  main h1#pageName::before, main h1#pageName::after {
     content: '';
     flex: 1;
     border-bottom: 2px solid #e5e2df; }
-  main h2#errPage:not(:empty)::before {
+  main h1#pageName:not(:empty)::before {
     margin-right: 1em; }
-  main h2#errPage:not(:empty)::after {
+  main h1#pageName:not(:empty)::after {
     margin-left: 1em; }
   main .main-block {
     padding: 80px;
@@ -40,7 +43,7 @@ main {
     flex-direction: row;
     position: relative; }
     main .main-block .oops {
-      background-image: url(/Users/yuliiayevhenieva/envs/osf-academy/images/exlamation.png);
+      background-image: url(../images/exlamation.png);
       background-repeat: no-repeat;
       background-size: cover;
       position: absolute;
@@ -74,7 +77,7 @@ main {
         color: #84bc22;
         cursor: pointer; }
       main .main-block .right-to-oops p, main .main-block .right-to-oops a {
-        font-size: 12px;
+        font-size: 14px;
         line-height: 20px; }
       main .main-block .right-to-oops .input {
         position: relative;
